--- a/html/index.html
+++ b/html/index.html
@@ -34,6 +34,8 @@
            <span>في متجرنا الإلكتروني نوفر لكم</span><br>
            اجمل اللوحات الفنية
             </p>
+            <a href="#">تصفح الفئات</a>
+            <h3>أفلام، مسلسلات، ألعاب، إنمي...إلخ</h3>
         </div>
         <img src="/src/logoPhoto.png" alt="">
      </div>
