--- a/html/index.html
+++ b/html/index.html
@@ -40,6 +40,14 @@
         <img src="/src/logoPhoto.png" alt="">
      </div>
     </section>
+    <section class="section2">
+        <h1>مميزاتنا</h1>
+        <div class="boulle">
+            <div class="oneBoulle">
+                
+            </div>
+        </div>
+    </section>
 
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
     <script>
