débuter surr le avantage

--- a/html/index.html
+++ b/html/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;500;700;800;900&family=Khula:wght@800&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="/style/style.css">
     <title>digital davinci</title>
 </head>
@@ -40,11 +41,26 @@
         <img src="/src/logoPhoto.png" alt="">
      </div>
     </section>
+<!--la section de les avantage -->
+
     <section class="section2">
         <h1>مميزاتنا</h1>
-        <div class="boulle">
-            <div class="oneBoulle">
-                
+        <div class="rondsEndDescription">
+            <div class="rond">
+                <i class="fa-solid fa-truck"></i>
+                <p>الدفع عند الإستلام مع تتبع الطرد</p>
+            </div>
+            <div class="rond">
+                <i class="fa-solid fa-list-check"></i>
+                <p>تصاميم تناسب ذوقك و حسب الطلب </p>
+            </div>
+            <div class="rond">
+                <i class="fa-solid fa-hand-sparkles"></i>
+                <p> صناعة يدوية على يد مختصين </p>
+            </div>
+            <div class="rond">
+                <i class="fa-solid fa-print"></i>
+                <p>طباعة رقمية عالية الجودة </p>
             </div>
         </div>
     </section>
