réglage des taille de les boulle de l'avantage

--- a/html/index.html
+++ b/html/index.html
@@ -46,19 +46,19 @@
     <section class="section2">
         <h1>مميزاتنا</h1>
         <div class="rondsEndDescription">
-            <div class="rond">
+            <div class="rond1" >
                 <i class="fa-solid fa-truck"></i>
                 <p>الدفع عند الإستلام مع تتبع الطرد</p>
             </div>
-            <div class="rond">
+            <div class="rond2">
                 <i class="fa-solid fa-list-check"></i>
                 <p>تصاميم تناسب ذوقك و حسب الطلب </p>
             </div>
-            <div class="rond">
+            <div class="rond3">
                 <i class="fa-solid fa-hand-sparkles"></i>
                 <p> صناعة يدوية على يد مختصين </p>
             </div>
-            <div class="rond">
+            <div class="rond4">
                 <i class="fa-solid fa-print"></i>
                 <p>طباعة رقمية عالية الجودة </p>
             </div>
