premier changement dans la nav barr

--- a/main/index.html
+++ b/main/index.html
@@ -27,7 +27,7 @@
             <img class="bgNav" src="/src/background nav.svg" alt="">
         </div>
     </nav>
-    <section>
+    <section id="main-container">
      <div class="container">
         <div class="context">
             <p>    
@@ -41,6 +41,7 @@
         <img src="/src/logoPhoto.png" alt="">
      </div>
     </section>
+
 <!--la section de les avantage -->
 
     <section class="section2">
@@ -64,7 +65,8 @@
             </div>
         </div>
     </section>
-
+    
+    <script src="/main/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
     <script>
         vue = new Vue ({
